deploy: d3a187c95f91bb6f4928aca6e3347148db15025d

--- a/Math1431/math1431.html
+++ b/Math1431/math1431.html
@@ -139,7 +139,7 @@ eBookConfig.enable_chatcodes =  false;
 <div class="ptx-page">
 <div id="ptx-sidebar" class="ptx-sidebar"><nav id="ptx-toc" class="ptx-toc depth2 focused" data-preexpanded-levels="0" data-max-levels="2"><ul class="structural toc-item-list contains-active"><li class="toc-item toc-chapter">
 <div class="toc-title-box"><a href="chap-1.html" class="internal"><span class="codenumber">1</span> <span class="title">Chapter 1</span></a></div>
-<ul class="structural toc-item-list"><li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-section11.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Limits</span></a></div></li></ul>
+<ul class="structural toc-item-list"><li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-section11.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Linear Equations</span></a></div></li></ul>
 </li></ul></nav></div>
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="book" id="math1431"><nav class="summary-links"><ul><li><a href="chap-1.html" class="internal"><span class="codenumber">1</span> <span class="title">Chapter 1</span></a></li></ul></nav><div class="autopermalink" data-description="Book: Math 1431: Pre-Calculus I"><a href="#math1431" title="Copy heading and permalink for Book: Math 1431: Pre-Calculus I" aria-label="Copy heading and permalink for Book: Math 1431: Pre-Calculus I">🔗</a></div></section></div>
 <div id="ptx-content-footer" class="ptx-content-footer">
